# PYAIclass

./: README.md  pyproject.toml  sample.ipynb  utils.py
jupyter/: Lek1213_and_MiniProject2.ipynb  MAN_1_cars_cmlykke_kladde.ipynb  lek1516.ipynb  lek1516_convoluted.ipynb  lek1516_convoluted_results.txt  lek1516_moon.ipynb  lek1516class.ipynb  lek17_emnisDecisionTree.ipynb  lek17_emnisHenrik.ipynb  lek17_emnisRandomForest.ipynb  lek17_trees.ipynb  lektion_04_B.ipynb  lektion_4_A.ipynb  notebook.ipynb  sample.ipynb
jupyter/MAN_1_cars/: 20260323_2029_AI_breakdown_v1.txt  Car-classification.ipynb  MAN_1_cars_cmlykke_kladde.ipynb
jupyter/MAN_1_cars/CarClassificationWithTuning/: Car-classification_private.ipynb  Car-classification_public.ipynb  Car-classification_public.md  GridSearchCV.md
