[project]
name = "pyaiclass"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.66.0",
    "torchvision>=0.25.0",
]
